Change data structure of group
Since we are only accepting 1 group per person, let's change the way group is stored

--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -27,7 +27,7 @@
           </minWidth>
         </Label>
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
-        <FlowPane fx:id="groups" maxWidth="50"/>
+        <FlowPane fx:id="group" maxWidth="50"/>
       </HBox>
       <Label fx:id="studentId" styleClass="cell_small_label" text="\$studentId" />
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
