--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -358,13 +358,13 @@
     -fx-background-radius: 0;
 }
 
-#groups {
+#group {
     -fx-hgap: 7;
     -fx-vgap: 3;
     -fx-padding: 3 0 0 3;
 }
 
-#groups .label {
+#group .label {
     -fx-text-fill: white;
     -fx-background-color: #3e7b91;
     -fx-padding: 1 3 1 3;
